<resources>
    <string name="application">PAS5</string>

    <string name="version_code">5.145</string>
    <string name="version">Версія: 5.145</string>

    <string name="app_name">Анкета</string>
    <string name="main">На головну</string>
    <string name="friend">Порадити другові</string>
    <string name="about">Про додаток</string>
    <string name="author">Автор</string>
    <string name="confidantional">Захист даних</string>
    <string name="contract">Умови</string>
    <string name="begin">Почати</string>
    <string name="selected">Обрано:</string>
    <string name="send_admin_mail">Надіслати адміністратору</string>
    <string name="first_name">Ім\'я</string>
    <string name="second_name">Прізвище</string>
    <string name="email">Email</string>
    <string name="phone_number">Телефон</string>


    <string name="compose_email">Compose Email</string>
    <string name="main_app_name">Таксі Лайт Юа</string>
    <string name="second_app_name_first">Робота зі своїм авто</string>
    <string name="second_app_name_second">Україна</string>
    <string name="contact">Контакт</string>
    <string name="auto">авто</string>
    <string name="model_auto">Модель</string>
    <string name="type_auto">Тип кузова</string>
    <string name="color_auto">Колір</string>
    <string name="yers_auto">Рік випуску</string>
    <string name="number_auto">Держ.номер</string>
    <string name="contact_info">Контакт</string>
    <string name="auto_info">Авто</string>
    <string name="services_info">Служби</string>
    <string name="save">Зберегти</string>
    <string name="send_message">Надіслати анкету</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="taxi_app">Заказ доставки</string>
    <string name="cancel_button">Ні, дякую</string>
    <string name="save_button">Зберегти</string>
    <string name="another_brand">Вкажіть марку Вашого автомобіля:</string>

    <string name="update_url">Оновити додаток</string>
    <string name="new_version">Доступна нова версія</string>
    <string name="news_of_version">У новій версії покращено продуктивність та додано нові зручні функції</string>
    <string name="enable_notifications">Увімкнути сповіщення</string>
    <string name="to_receive_updates_please_enable_notifications_for_this_app">Щоб отримувати оновлення, увімкніть сповіщення для цієї програми.</string>
    <string name="ok">ОК</string>
    <string name="cancel">Скасувати</string>

</resources>