<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TableLayout
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow>
            <TextView
                android:layout_marginTop="5sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Марка"
                android:textColor="@color/text" />

            <Spinner
                android:id="@+id/list_auto"
                android:layout_width="282sp"
                android:layout_height="33sp"
                android:layout_gravity="center"
                android:layout_marginLeft="5sp"
                android:background="@color/text"
                android:gravity="clip_horizontal"
                android:minWidth="282sp"
                android:minHeight="20sp" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_marginTop="5sp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/model_auto"
                android:textColor="@color/text"/>

            <EditText
                android:layout_marginTop="5sp"
                android:layout_marginLeft="5sp"
                android:layout_width="282sp"
                android:backgroundTint="@color/colorAccent"
                android:inputType="text"
                android:text=""
                android:textColor="@color/text"
                android:id="@+id/model_auto"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_marginTop="5sp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_auto"
                android:textColor="@color/text" />
            <Spinner
                android:id="@+id/type_auto"
                android:minWidth="282sp"
                android:minHeight="33sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5sp"
                android:background="@color/text"
                android:gravity="clip_horizontal"  />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_marginTop="5sp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/color_auto"
                android:textColor="@color/text"/>

            <EditText
                android:layout_marginLeft="5sp"
                android:textSize="20sp"
                android:layout_width="282sp"
                android:backgroundTint="@color/colorAccent"
                android:inputType="text"
                android:text=""
                android:textColor="@color/text"
                android:id="@+id/color_auto"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_marginTop="5sp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/yers_auto"
                android:textColor="@color/text"/>

            <EditText
                android:layout_marginLeft="5sp"
                android:textSize="20sp"
                android:layout_width="282sp"
                android:backgroundTint="@color/colorAccent"
                android:inputType="number"
                android:text=""
                android:textColor="@color/text"
                android:id="@+id/years_auto"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_marginTop="5sp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/number_auto"
                android:textColor="@color/text"/>

            <EditText
                android:layout_marginLeft="5sp"
                android:textSize="20sp"
                android:layout_width="282sp"
                android:backgroundTint="@color/colorAccent"
                android:inputType="text"
                android:text=""
                android:textColor="@color/text"
                android:id="@+id/number_auto"/>
        </TableRow>

    </TableLayout>

</LinearLayout>