<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow>
            <TextView
                android:layout_marginTop="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Місто"
                android:textColor="@color/text" />
            <Spinner
                android:id="@+id/list_cities"
                android:layout_width="282sp"
                android:layout_height="33sp"
                android:layout_gravity="center"
                android:layout_marginLeft="10sp"
                android:background="@color/text"
                android:gravity="clip_horizontal"
                android:minWidth="282sp"
                android:minHeight="20sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_marginTop="10sp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/text"/>
            <EditText
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:layout_width="282sp"
                android:backgroundTint="@color/colorAccent"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="@color/text"
                android:id="@+id/first_name"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_marginTop="10sp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/second_name"
                android:textColor="@color/text"/>

            <EditText
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:layout_width="282sp"
                android:backgroundTint="@color/colorAccent"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="@color/text"
                android:id="@+id/second_name"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_marginTop="10sp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/email"
                android:textColor="@color/text"/>

            <EditText
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:layout_width="282sp"
                android:backgroundTint="@color/colorAccent"
                android:inputType="textEmailAddress"
                android:text=""
                android:textColor="@color/text"
                android:id="@+id/email"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_marginTop="10sp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/text"/>

            <EditText
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:layout_width="282sp"
                android:backgroundTint="@color/colorAccent"
                android:inputType="phone"
                android:text="+380"
                android:textColor="@color/text"
                android:id="@+id/phone_number"/>
        </TableRow>
    </TableLayout>
</LinearLayout>